<resources>
    <string name="app_name">LINKa: show</string>
    <string name="action_settings">Settings</string>
    <string name="action_choose_directory">Choose directory</string>
    <string name="root">Root</string>
    <string name="image_title">Input image title</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="action_add_picture">Add picture</string>
    <string name="action_picture_menu">Picture menu</string>
    <string name="new_image_title">Input new image title</string>
    <string name="action_create_directory">Create directory</string>
    <string-array name="pictitles">
        <item>Circle</item>
        <item>Connect</item>
        <item>Draw</item>
        <item>Take away</item>
        <item>Colour</item>
        <item>What colour</item>
        <item>Glue</item>
        <item>Expand</item>
        <item>Show</item>
        <item>Put</item>
        <item>What is it</item>
        <item>Copy</item>
    </string-array>

    <string-array name="picture_menu" >
        <item>Rename</item>
        <item>Delete</item>
    </string-array>
    <string name="appmetrica_key" translatable="false">a6217d8d-b1bb-47c8-b095-b81ebdde3a39</string>
    <string name="new_directory_title">Input new directory title</string>
    <string name="action_show_create_directory">Show create directory button</string>
    <string name="isChooseDirectoryShow" translatable="false">ChooseDirectoryShow</string>
    <string name="action_feedback">Feedback</string>
    <string name="input_email">Input your email for answer</string>
    <string name="input_feedback">Input feedback</string>
    <string name="thanks_feedback">Thanks feedback</string>
    <string name="dont_input">Sorry, you dont input email or text</string>
    <string name="action_set_size">Set buttons size</string>
    <string name="no_permissions">you didn\'t give me permissions for work</string>
    <string name="store">Store</string>
    <string name="sets">Sets</string>
    <string name="content">Content</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Downloaded</string>
    <string name="version_doesnt_support">your version  android doesn\'t support</string>
    <string name="set">Set</string>
    <string name="action_set_menu">Set menu</string>
    <string name="new_set_title">Enter new set title</string>
    <string name="cant_edit_set">You can\'t edit this set</string>
    <string name="connection_error">Connection error</string>
    <string name="try_again">Try again</string>
    <string name="promo_store_message">Hi, we developed pictures library, let\'s see our store</string>
    <string name="tts_settings">Open tts settings</string>
    <string name="install_tts">Please, install the speech synth from the Play Store.</string>
    <string name="lang_doesnt_support">I can\'t speak</string>

</resources>